--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -6,6 +6,7 @@
 ^logo$
 ^data-raw$
 ^manuscript$
+^analysis$
 
 # R-markdown files in the root folder.
 ^LICENSE$
@@ -23,4 +24,4 @@
 ^\.httr-oauth$
 ^logo\..*$
 ^codemeta\.json$
-^.*\\.png$
+^.*\.png$
